Fixed Text Centering in Changelogs

--- a/Back Math/Changelogs/1.6.0 - Early Build 3.md
+++ b/Back Math/Changelogs/1.6.0 - Early Build 3.md
@@ -1,5 +1,5 @@
-# <center>- Back Math - 1.6.0 Early Build 3 -</center>
-### <center>A Back Math Update Changelog made on *26/07/2024*</center>
+# <div style="text-align: center;">- Back Math - 1.6.0 Early Build 3 -</div>
+### <div style="text-align: center;">A Back Math Update Changelog made on *26/07/2024*</div>
 
 ## Additions
 ### Items
